fix visualizzazione lista videogames